--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,12 @@
 {
-    "version": 2,
     "builds": [
-        {"src": "app.py", "use": "@vercel/python"}
-    ],
-    "routes": [
-        {"src": "/(.*)", "dest": "app.py"}
+      {
+        "src": "app.py",
+        "use": "@vercel/python",
+        "config": {
+          "installCommand": "apt-get update && apt-get install -y default-libmysqlclient-dev && pip install -r requirements.txt"
+        }
+      }
     ]
-}
-
+  }
+  
